Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23076

Misleading "Innodb: using atomic writes"

    XMLWordPrintable

Details

    Description

      "InnoDB: using atomic writes." is always printed, with fprintf, different in formatting to anything else.

      The message is misleading.
      Note, that neither I chose the page size to be 4K, nor do I have 4K sectors on the disk here,
      which would be prerequisite of atomic writes (on Windows)

      InnoDB: using atomic writes.
      2020-07-02 23:18:26 0 [Note] InnoDB: Mutexes and rw_locks use Windows interlocked functions
      2020-07-02 23:18:26 0 [Note] InnoDB: Uses event mutexes
      2020-07-02 23:18:26 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2020-07-02 23:18:26 0 [Note] InnoDB: Number of pools: 1
      2020-07-02 23:18:26 0 [Note] InnoDB: Using SSE2 crc32 instructions
      2020-07-02 23:18:26 0 [Note] InnoDB: Initializing buffer pool, total size = 16M, instances = 1, chunk size = 16M
      2020-07-02 23:18:26 0 [Note] InnoDB: Completed initialization of buffer pool
      2020-07-02 23:18:26 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=300288
      2020-07-02 23:18:26 0 [Note] InnoDB: 128 out of 128 rollback segments are active.
      2020-07-02 23:18:26 0 [Note] InnoDB: Removed temporary tablespace data file: "ibtmp1"
      2020-07-02 23:18:26 0 [Note] InnoDB: Creating shared tablespace for temporary tables
      2020-07-02 23:18:26 0 [Note] InnoDB: Setting file 'C:\xampp\mysql\data\ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
      2020-07-02 23:18:26 0 [Note] InnoDB: File 'C:\xampp\mysql\data\ibtmp1' size is now 12 MB.
      2020-07-02 23:18:26 0 [Note] InnoDB: Waiting for purge to start
      2020-07-02 23:18:26 0 [Note] InnoDB: 10.4.13 started; log sequence number 300297; transaction id 171
      2020-07-02 23:18:26 0 [Note] InnoDB: Loading buffer pool(s) from C:\xampp\mysql\data\ib_buffer_pool
      2020-07-02 23:18:26 0 [Note] Plugin 'FEEDBACK' is disabled.
      2020-07-02 23:18:26 0 [Note] Server socket created on IP: '::1'.
      2020-07-02 23:18:26 0 [Note] InnoDB: Buffer pool(s) load completed at 200702 23:18:26
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75h
                  0.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.